fix submoduels remote

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "lib-demo"]
 	path = lib-demo
-	url = git@github-sub:flamelen/lib-demo.git
+	url = git@github.com:flamelen/lib-demo.git
 [submodule "bot-demo"]
 	path = bot-demo
-	url = git@github-sub:flamelen/bot-demo.git
+	url = git@github.com:flamelen/bot-demo.git
 [submodule "cli-demo"]
 	path = cli-demo
-	url = git@github-sub:flamelen/cli-demo.git
+	url = git@github.com:flamelen/cli-demo.git
