--- a/slides/package.json
+++ b/slides/package.json
@@ -15,5 +15,8 @@
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "vue": "^3.5.25"
+  },
+  "devDependencies": {
+    "playwright-chromium": "^1.57.0"
   }
 }
