--- a/slides/package.json
+++ b/slides/package.json
@@ -14,9 +14,20 @@
     "@slidev/cli": "^52.11.0",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
+    "slidev-addon-fancy-arrow": "^0.16.0",
     "vue": "^3.5.25"
   },
   "devDependencies": {
-    "playwright-chromium": "^1.57.0"
+    "playwright-chromium": "^1.57.0",
+    "prettier": "^3.7.4",
+    "prettier-plugin-slidev": "^1.0.5"
+  },
+  "slidev": {
+    "defaults": {
+      "themeConfig": {
+        "paginationX": "r",
+        "paginationY": "t"
+      }
+    }
   }
 }
