fix liniting with new repo structure

--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -12,7 +12,7 @@ globs:
   - "**/*.md"
 ignores:
   - "slides/theme/example.md"
-  - "curriculum.md"
+  - "pages/curriculum/curriculum.md"
   - "slides/**/*.md"
 noBanner: false
 noInlineConfig: true
